csrc/tests/zxbc_parse_expected/sn_crash.err.expected
<PROJECT_ROOT>/tests/functional/arch/zx48k/sn_crash.bas:4: error: Cannot convert string to a value. Use VAL() function
